chore: checkpoint current TerraPedia app work